; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_server.c_process_bind_packet.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_server.c_process_bind_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RPC_S_OK = common dso_local global i64 0, align 8
@ERROR_OUTOFMEMORY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32*, i8*, i32)* @process_bind_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @process_bind_packet(i32* %0, i32* %1, i32* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32* null, i32** %12, align 8
  store i8* null, i8** %13, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i64 @process_bind_packet_no_send(i32* %15, i32* %16, i32* %17, i8* %18, i32 %19, i32** %12, i8** %13, i32* %14)
  store i64 %20, i64* %11, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i64, i64* @RPC_S_OK, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %5
  %25 = load i32*, i32** %6, align 8
  %26 = load i64, i64* %11, align 8
  %27 = call i32* @handle_bind_error(i32* %25, i64 %26)
  store i32* %27, i32** %12, align 8
  br label %28

28:                                               ; preds = %24, %5
  %29 = load i32*, i32** %12, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %12, align 8
  %34 = load i8*, i8** %13, align 8
  %35 = load i32, i32* %14, align 4
  %36 = call i64 @RPCRT4_SendWithAuth(i32* %32, i32* %33, i32* null, i32 0, i8* %34, i32 %35)
  store i64 %36, i64* %11, align 8
  br label %39

37:                                               ; preds = %28
  %38 = load i64, i64* @ERROR_OUTOFMEMORY, align 8
  store i64 %38, i64* %11, align 8
  br label %39

39:                                               ; preds = %37, %31
  %40 = load i32*, i32** %12, align 8
  %41 = call i32 @RPCRT4_FreeHeader(i32* %40)
  %42 = load i64, i64* %11, align 8
  ret i64 %42
}

declare dso_local i64 @process_bind_packet_no_send(i32*, i32*, i32*, i8*, i32, i32**, i8**, i32*) #1

declare dso_local i32* @handle_bind_error(i32*, i64) #1

declare dso_local i64 @RPCRT4_SendWithAuth(i32*, i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @RPCRT4_FreeHeader(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
